--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="This website is about my achievements and my education.">
+  <meta name="author" content="862357750">
 
-  <title>John Doe - Business Administration</title>
+  <title>Heide Ortiz - School Administrator</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Heide Ortiz</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/heideortiz.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,29 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Heide Ortiz
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Throughout my educational experience, I have been able to work alongside teachers and children. When I was in the eighth grade, I would volunteer to help out in classrooms for the third and fourth graders. For example, I would help them with their homework and any assignments that they needed to get done. Additionally, I would also help the teacher calm them down or get them to pay attention and stay on task. I really liked helping the kids because it taught me a lot about them and it showed me that it is a career that I could succeed in.<br><br>
 
-        Enter bio here<br><br>
+        Moreover, I was also in choir for about six years and in choir I realized how important it is to work with another and understand each other. When we work together, we are able to get more done and we are able to do a better job. Choir really helped develop my people skills and it helped me become a better public speaker as well. For example, as the vice president of choir, it was my duty to give certain presentations in front of large audiences. A specific event in particular was when we went to different middle schools in hopes of recruiting more kids for choir. I had to give a speech on why I thought choir would be a great opportunity for them and how it would heavily impact their lives because in choir, you are able to build relationships with peers that will last a lifetime. As a result of these events, I was able to lose the fear I had for public speaking and little by little I was able to get better at speaking in front of large crowds.
+<br><br>
 
-        Enter bio here
+        
+Furthermore, throughout high school, I joined many clubs which showed me how important time management, communication, and collaboration are when it comes to getting a certain job done. For instance, through ASB I was able to realize how important it is to communicate with my peers in order to get things done on time. Additionally, other clubs such as Leo and Key Club showed me how important it is to be punctual and get things done on time. For instance, Leo offered many opportunities that students needed to take advantage of in order to get their hours to retain senior regalia. With this in mind, I knew that I had to set up my schedule a certain way to be able to have enough time for all that I needed and wanted to get done. All of these clubs definitely helped me become a better student which is why I have continued to be in clubs now in college. For example, one club I am currently in is Mujeres Unidas and this club has shown me thus far how important it is to build relationships because such relationships could be very beneficial for you in the long run.
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://twitter.com/">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.linkedin.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +95,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Homeless Pets Club</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.homelesspetclubs.org/">Club</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Took attendance in meetings<br> 
+              • Updated club with new information<br>
+              • Helped perform fundraisers<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">October 2018 - June 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Leo Club</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.lionsclubs.org/en/discover-our-clubs/about-leos">Club</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Volunteered in events<br>
+              • Helped out the community<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2020 - June 2022</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">ASB</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.greatschools.org/california/el-monte/1728-Arroyo-High-School/">organization</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Working on bulletin boards<br>
+            • Helped decorate for events<br>
+            • Collaborated with others to set up for events<br>
+            • Attended meetings and updated officers<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">July 2021 - April 2022</span>
           </div>
         </div>
 
@@ -148,37 +151,28 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
-
+        
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
+    <div class="resume-content">
+        <h3 class="mb-0">Arroyo High School</h3>
+        <div class="subheading mb-3">K-12 Education</div>
+        <div>General Education</div>
+    </div>
+    <div class="resume-date text-md-right">
+        <span class="text-primary">August 2018 - June 2022</span>
+    </div>
+</div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
+
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">Education</div>
+            <div>Education for Social Justice</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2022 - June 2026</span>
           </div>
         </div>
 
@@ -191,7 +185,11 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/room.jpg" width="500px">
+            <img src="img/el_chupacabra (1).png" width="500px"><br>
+    <img src="img/IMG-2857 (1).jpg" width="500px">
+    <img src="img/image (3).jpg" width="500px"><br>
+</center>
         </center>
       </div>
     </section>
@@ -199,7 +197,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Heide Ortiz</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
