--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="w-100">
         <h1 class="mb-3">Heide Ortiz
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
+        <div class="subheading mb-5">Education📚</div>
         <p class="lead mb-4">Throughout my educational experience, I have been able to work alongside teachers and children. When I was in the eighth grade, I would volunteer to help out in classrooms for the third and fourth graders. For example, I would help them with their homework and any assignments that they needed to get done. Additionally, I would also help the teacher calm them down or get them to pay attention and stay on task. I really liked helping the kids because it taught me a lot about them and it showed me that it is a career that I could succeed in.<br><br>
 
         Moreover, I was also in choir for about six years and in choir I realized how important it is to work with another and understand each other. When we work together, we are able to get more done and we are able to do a better job. Choir really helped develop my people skills and it helped me become a better public speaker as well. For example, as the vice president of choir, it was my duty to give certain presentations in front of large audiences. A specific event in particular was when we went to different middle schools in hopes of recruiting more kids for choir. I had to give a speech on why I thought choir would be a great opportunity for them and how it would heavily impact their lives because in choir, you are able to build relationships with peers that will last a lifetime. As a result of these events, I was able to lose the fear I had for public speaking and little by little I was able to get better at speaking in front of large crowds.
